xcb: Ignore XI2 LMB mouse events from touch screens

157ee01a8d0be9a4dbac03883c9eaf3609fc1172 was trying to
minimize some side effects of the bug in the evdev driver
(https://bugs.freedesktop.org/show_bug.cgi?id=98188) by
not changing mouse button state on motion.
Unfortunately it resurrected bugs that were fixed by
76de1ac0a4cd384f608a14b5d77a8cf3ef1ec868.
Filter out mouse events from touch screens instead.
This change reverts 157ee01a8d0be9a4dbac03883c9eaf3609fc1172.

Task-number: QTBUG-32609
Task-number: QTBUG-35065
Task-number: QTBUG-43776
Task-number: QTBUG-44166
Task-number: QTBUG-44231
Task-number: QTBUG-56156
Change-Id: Ie17710d94beabeb08681d669a9d8309be9b44e73
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>