src/plugins/platforms/xcb/qxcbconnection_xi2.cpp
@@ -1025,6 +1025,13 @@ Qt::MouseButton QXcbConnection::xiToQtMouseButton(uint32_t b)
     return Qt::NoButton;
 }
 
+bool QXcbConnection::isTouchScreen(int id) const
+{
+    auto device = m_touchDevices.value(id);
+    return device && device->qtTouchDevice
+        && device->qtTouchDevice->type() == QTouchDevice::TouchScreen;
+}
+
 static QTabletEvent::TabletDevice toolIdToTabletDevice(quint32 toolId) {
     // keep in sync with wacom_intuos_inout() in Linux kernel driver wacom_wac.c
     switch (toolId) {
